# LibreChat

./: .gitignore  MIGRATION_SUMMARY.md  QUICK_START.md  SETUP_COMPLETE.md  STUDIO_INTEGRATION.md  package-lock.json  package.json
client/: package.json  vite.config.ts
client/src/components/Admin/: ChatSettings.tsx  EndpointsCard.tsx  FileUploadCard.tsx  ModelsUploadCard.tsx  UploadedFilesTable.tsx
client/src/components/Artifacts/: Artifacts.tsx  DashboardCard.tsx  DashboardCardWrapper.tsx  DashboardSettings.tsx
client/src/components/Chat/: Presentation.tsx
client/src/components/Landing/: LandingFeatures.tsx  LandingFooter.tsx  LandingHero.tsx
client/src/components/SidePanel/: SidePanelGroup.tsx
client/src/components/Studio/: ProtectedRoute.tsx  StudioDashboard.tsx  (+1 more)
client/src/hooks/: useLenis.ts
client/src/routes/: LDAIAdmin.tsx  Landing.tsx  StudioDashboard.tsx  index.tsx
studio-backend/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
studio-backend/db/: sqlite.ts
studio-backend/llm/: provider.ts
studio-backend/middleware/: auth.ts
studio-mcp/: README.md
studio-mcp/fish_mcp/: __init__.py  fish_server.py  pyproject.toml
studio-mcp/fish_mcp/fish_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
studio-mcp/impact_mcp/: __init__.py  impact_server.py  pyproject.toml
studio-mcp/impact_mcp/impact_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
studio-mcp/seagrass_mcp/: __init__.py  pyproject.toml  seagrass_server.py
studio-mcp/seagrass_mcp/seagrass_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+83 files in other folders)
