[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seagrass_mcp"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = ["mcp>=0.3.0", "fastmcp>=0.2.0"]

[tool.setuptools]
packages = ["seagrass_mcp"]
package-dir = { seagrass_mcp = "." }
